@@ -1,167 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>com.xiesx.fastboot</groupId>
-        <artifactId>parent</artifactId>
-        <version>master-SNAPSHOT</version>
-    </parent>
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.xiesx.fastboot</groupId>
+		<artifactId>parent</artifactId>
+		<version>master-SNAPSHOT</version>
+	</parent>
 
-    <artifactId>extension-spring6</artifactId>
-    <packaging>jar</packaging>
+	<artifactId>extension-spring6</artifactId>
+	<packaging>jar</packaging>
 
-    <dependencies>
-        <!-- jpa -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-            <version>${springboot3}</version><!--$NO-MVN-MAN-VER$-->
-        </dependency>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-dependencies</artifactId>
+				<version>${springboot3}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
-        <!-- guava -->
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-        </dependency>
-        
-        <!-- hutool -->
-        <dependency>
-            <groupId>cn.hutool</groupId>
-            <artifactId>hutool-all</artifactId>
-        </dependency>
-    </dependencies>
+	<dependencies>
+		<!-- hibernate -->
+		<dependency>
+			<groupId>org.hibernate.orm</groupId>
+			<artifactId>hibernate-core</artifactId>
+		</dependency>
 
-<profiles>
-		<!-- SpringBoot2 -->
-		<profile>
-			<id>sb2</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<properties>
-				<java.version>${jdk8}</java.version>
-				<springboot.version>${springboot2}</springboot.version>
-				<querydsl.version>${querydsl500}</querydsl.version>
-				<classifier></classifier>
-				<coveralls.version>4.5.0</coveralls.version>
-				<fastjson.artifactId>${fastjson_spring5}</fastjson.artifactId>
-				<fastboot.artifactId>${fastboot_spring5}</fastboot.artifactId>
-			</properties>
-			<dependencies>
-				<!-- validation -->
-				<dependency>
-					<groupId>org.springframework.boot</groupId>
-					<artifactId>spring-boot-starter-validation</artifactId>
-				</dependency>
-				<!-- test -->
-				<dependency>
-					<groupId>org.springframework.boot</groupId>
-					<artifactId>spring-boot-starter-test</artifactId>
-					<scope>test</scope>
-					<exclusions>
-						<exclusion>
-							<groupId>org.mockito</groupId>
-							<artifactId>mockito-core</artifactId>
-						</exclusion>
-					</exclusions>
-				</dependency>
-				<dependency>
-					<groupId>org.mockito</groupId>
-					<artifactId>mockito-inline</artifactId>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<version>3.2.5</version>
-						<configuration>
-							<argLine>-Dnet.bytebuddy.experimental=true</argLine>
-						</configuration>
-					</plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.13.0</version>
-                <configuration>
-                    <source>${jdk8}</source>
-                    <target>${jdk8}</target>
-                    <compilerArgs>
-                        <arg>-parameters</arg>
-                    </compilerArgs>
-                </configuration>
-            </plugin>
-				</plugins>
-			</build>
-		</profile>
-
-		<!-- SpringBoot3  -->
-		<profile>
-			<id>sb3</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-			<properties>
-				<java.version>${jdk21}</java.version>
-				<springboot.version>${springboot3}</springboot.version>
-				<querydsl.version>${querydsl510}</querydsl.version>
-				<classifier>jakarta</classifier>
-				<coveralls.version>5.0.0</coveralls.version>
-				<fastjson.artifactId>${fastjson_spring6}</fastjson.artifactId>
-				<fastboot.artifactId>${fastboot_spring6}</fastboot.artifactId>
-			</properties>
-			<dependencies>
-				<dependency>
-					<groupId>jakarta.validation</groupId>
-					<artifactId>jakarta.validation-api</artifactId>
-					<version>3.0.2</version>
-				</dependency>
-				<dependency>
-					<groupId>org.hibernate.validator</groupId>
-					<artifactId>hibernate-validator</artifactId>
-					<version>8.0.0.Final</version>
-				</dependency>
-				<dependency>
-					<groupId>jakarta.servlet</groupId>
-					<artifactId>jakarta.servlet-api</artifactId>
-					<version>6.0.0</version>
-					<scope>provided</scope>
-				</dependency>
-				<dependency>
-					<groupId>jakarta.servlet.jsp</groupId>
-					<artifactId>jakarta.servlet.jsp-api</artifactId>
-					<version>3.1.1</version>
-					<scope>provided</scope>
-				</dependency>
-				<dependency>
-					<groupId>jakarta.persistence</groupId>
-					<artifactId>jakarta.persistence-api</artifactId>
-					<version>3.1.0</version>
-					<scope>provided</scope>
-				</dependency>
-			</dependencies>
-			<build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.13.0</version>
-                <configuration>
-                    <source>${jdk21}</source>
-                    <target>${jdk21}</target>
-                    <compilerArgs>
-                        <arg>-parameters</arg>
-                    </compilerArgs>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-		</profile>
-	</profiles>
-	
-    
+		<!-- hutool -->
+		<dependency>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-all</artifactId>
+		</dependency>
+	</dependencies>
 
 </project>
